# CascLib

./: .gitattributes  .gitignore  CMakeLists.txt  CascLib.bat  CascLib.kdev4  CascLib.sln  CascLib.vcproj  CascLib.vcxproj  CascLib.vcxproj.filters  CascLib_dll.vcproj  CascLib_dll.vcxproj  CascLib_dll.vcxproj.filters  CascLib_test.vcproj  CascLib_test.vcxproj  CascLib_test.vcxproj.filters  CascLib_vs08.bat  CascLib_vs08.sln  CascLib_vs08.vcproj  CascLib_vs08_dll.vcproj  CascLib_vs08_test.vcproj  CascLib_vs09.sln  CascLib_vs15.sln  CascLib_vs15.vcxproj  CascLib_vs15.vcxproj.filters  CascLib_vs15_dll.vcxproj  CascLib_vs15_dll.vcxproj.filters  CascLib_vs15_test.vcproj  CascLib_vs15_test.vcxproj  CascLib_vs15_test.vcxproj.filters  CascLib_vs17.bat  CascLib_vs17.sln  CascLib_vs17.vcxproj  CascLib_vs17.vcxproj.filters  CascLib_vs17_dll.vcxproj  CascLib_vs17_dll.vcxproj.filters  CascLib_vs17_test.vcxproj  CascLib_vs17_test.vcxproj.filters  CascLib_vs19.bat  CascLib_vs19.sln  CascLib_vs19.vcxproj  (+19 more)
cmake/: Utilities.cmake
debian/: README  changelog  control  copyright  libcasc-dev.install  libcasc1.substvars  rules
doc/: casclib-test-005.txt  history.txt
listfile/: listfile-download.bat  listfile.csv  update-listfiles.py  update.bat
src/: CascBuildCfg.cpp  CascCommon.cpp  CascCommon.h  CascDecompress.cpp  CascDecrypt.cpp  CascDumpData.cpp  CascFiles.cpp  CascFindFile.cpp  CascIndexFiles.cpp  CascLib.def  CascLib.h  CascMndx.h  CascMndxRoot.cpp  CascMndxRoot.h  CascMndxRoot_x86.asm  CascOpenFile.cpp  CascOpenStorage.cpp  CascPort.h  CascReadFile.cpp  CascRootFile_Diablo3.cpp  CascRootFile_Diablo3.h  CascRootFile_Diablo3_old.cpp  CascRootFile_Install.cpp  CascRootFile_MNDX.cpp  CascRootFile_MNDX_x86.asm  CascRootFile_Mndx.cpp  CascRootFile_Mndx.h  CascRootFile_OW.cpp  CascRootFile_Ovr.cpp  CascRootFile_SC1.cpp  CascRootFile_TVFS.cpp  CascRootFile_Text.cpp  CascRootFile_WoW.cpp  CascRootFile_WoW.h  CascRootFile_WoW6.cpp  CascStructs.h  CascTextFiles.cpp  DllMain.c  DllMain.def  DllMain.rc
src/common/: Array.cpp  Array.h  ArraySparse.h  Common.cpp  Common.h  Csv.cpp  Csv.h  Directory.cpp  Directory.h  DumpContext.cpp  DumpContext.h  DynamicArray.cpp  DynamicArray.h  FileStream.cpp  FileStream.h  FileTree.cpp  FileTree.h  HashToPtr.cpp  HashToPtr.h  HashToPtr_sav.cpp  HashToPtr_sav.h  ListFile.cpp  ListFile.h  Map.cpp  Map.h  Mime.cpp  Mime.h  Path.h  RootFile.cpp  RootFile.h  RootHandler.cpp  RootHandler.h  Socket.cpp  Socket.h  Sockets.cpp  Sockets.h
src/jenkins/: lookup.h  lookup3.c
src/libtomcrypt/src/hashes/: hash_memory.c  md5.c
src/libtomcrypt/src/headers/: tomcrypt.h  tomcrypt_argchk.h  tomcrypt_cfg.h  tomcrypt_cipher.h  tomcrypt_custom.h  tomcrypt_hash.h  tomcrypt_mac.h  tomcrypt_macros.h  tomcrypt_math.h  tomcrypt_misc.h  tomcrypt_pk.h  tomcrypt_pkcs.h  tomcrypt_prng.h
src/libtomcrypt/src/misc/: crypt_argchk.c  crypt_hash_descriptor.c  crypt_hash_is_valid.c  crypt_libc.c
src/overwatch/: apm.cpp  cmf.cpp
src/zlib/: inflate.h  inftrees.h
test/: CascTest.cpp  TLogHelper.cpp  casclib-test-001.txt  casclib-test-002.txt  casclib-test-003.txt  casclib-test-004.txt  casclib-test-006.txt
